--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <head>
 
         <meta charset="UTF-8">
-        <tiltle><h1>Barberia Alura</h1></tiltle>
         <link rel="stylesheet" href="style.css">
         
 
@@ -13,11 +12,16 @@
 
     <body>
 
-      <img id="banner" src="banner.jpg">
+        <header>
+            <h1 class="titulo-principal">Barbería Alura</h1>
+          </header>
+
+         <img id="banner" src="banner.jpg">
+
 
         <div class="principal">
 
-            <h2>Sobre la Barberia Alura</h2>
+            <h2 class="titulo-centralizado">Sobre la Barbería Alura</h2>
 
     
             <p>Ubicada en el corazón de la ciudad, <strong> La Barbería Alura </strong> trae para el mercado lo que hay de mejor para su cabello y barba. Fundada en 2020, la Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente.</p> 
@@ -32,7 +36,7 @@
         <div class="diferenciales">
 
 
-            <h3>Difirenciales</h3>
+            <h3 class="titulo-centralizado">Diferenciales</h3>
 
             <ul>
 
