--- a/index.html
+++ b/index.html
@@ -5,7 +5,19 @@
     <head>
 
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="style.css">
+        <title>Barbería Alura</title>
+        <link rel="stylesheet" href="style-home.css">
+        <div class="caja">
+            <h1><img src="imagenes/logo.png"></h1>
+              <nav>
+                  <ul> 
+                     <li><a href ="index.html">Home</a></li>
+                     <li><a href ="productos.html">Productos</a></li>
+                     <li><a href ="contacto.html">Contacto</a></li>
+                  </ul>
+
+              </nav> 
+        </div>
         
 
     </head>
